# Claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  V66_Bumba-meu-boi_Research_Dossier.md  docker-compose.test.yml  docker-compose.yml  dossier_maranhao_desigualdade.md
sim/: CLAUDE.md  (+1 more)
sim-global/backend/: README.md  alembic.ini  pyproject.toml
sim-global/backend/alembic/: env.py
sim-global/backend/alembic/versions/: 0001_initial_schema.py
sim-global/backend/src/simengine/: __init__.py  engine.py
sim-global/backend/src/simengine/schemas/: __init__.py  common.py  delta.py  event.py  polity.py  region.py  scenario.py  state.py
sim-global/backend/src/simengine/scripts/: apply_delta.py  export_campaign.py  validate_turn.py
sim-global/backend/src/simglobal/: __init__.py  __main__.py  auth.py  config.py  main.py  scenarios.py  state_loader.py
sim-global/backend/src/simglobal/agent/: __init__.py  client.py
sim-global/backend/src/simglobal/persistence/: __init__.py  db.py  models.py  repositories.py
sim-global/backend/src/simglobal/prompts/: advisor.md  consolidator.md  diplomat.md  game_master.md  scenario_builder.md
sim-global/backend/src/simglobal/routes/: api.py
sim-global/backend/src/simglobal/web/static/: manifest.json  sw.js
sim-global/backend/src/simglobal/web/static/css/: main.css
sim-global/backend/src/simglobal/web/static/js/: main.js
sim-global/backend/src/simglobal/web/templates/: index.html
sim-global/backend/tests/: test_agent.py  test_app.py  test_engine.py  test_persistence.py  test_schemas.py  test_scripts.py
(+1282 files in other folders)
