[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simengine"
version = "0.1.0"
description = "Motor determinístico para simuladores históricos turn-based em Claude Code"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simengine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
